--- a/index.html
+++ b/index.html
@@ -22,47 +22,88 @@
 
     <main>
 
+      <div class="main-nav float-left">
+
+        <div class="nav-top">
+
+          <div class="nav-logo">
+            <img src="assets/img/logo.svg" alt="spotify-logo">
+          </div>
+          <!-- <div class="nav-logo-mobile">
+            <img src="" alt="">
+          </div> -->
+
+          <div class="nav-left">
+            <div class="voice selected">
+              <div class="green-bar"></div>
+              <img src="assets/img/home.svg" alt="">
+              <h4> Home</h4>
+            </div>
+            <div class="voice non-selected">
+              <img src="assets/img/search.svg" alt="">
+              <h4> Cerca</h4>
+            </div>
+            <div class="voice non-selected">
+              <img src="assets/img/libreria.svg" alt="">
+              <h4> La tua libreria</h4>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="nav-bottom"></div>
+
+      </div>
+
     </main>
 
     <footer>
 
-      <div class="song-details float-left">
-        <img src="assets/img/sinister.jpeg" alt="">
-        <div class="name-artist">
-          <h5>Sinister</h5>
-          <p>Brano Nome</p>
-        </div>
-        <div class="save-song">
-          <i class="far fa-heart"></i>
-          <i class="far fa-folder"></i>
-        </div>
-      </div>
+      <section id="player">
 
-      <div class="media-control float-left">
-        <div class="media-panel">
-          <i class="fas fa-random"></i>
-          <i class="fas fa-step-backward"></i>
-          <i class="far fa-play-circle play"></i>
-          <i class="fas fa-step-forward"></i>
-          <i class="fas fa-redo-alt"></i>
+        <div class="player-song">
+          <img src="assets/img/sinister.jpeg" alt="">
+          <div class="name-artist">
+            <h5>Sinister</h5>
+            <p>Brano Nome</p>
+          </div>
+          <div class="save-song">
+            <i class="far fa-heart"></i>
+            <i class="far fa-folder"></i>
+          </div>
         </div>
-        <div class="duration-bar">
-          <span>0:25</span>
+  
+        <div class="player-controller">
+          <div class="media-panel">
+            <i class="fas fa-random"></i>
+            <i class="fas fa-step-backward"></i>
+            <i class="far fa-play-circle play"></i>
+            <i class="fas fa-step-forward"></i>
+            <i class="fas fa-redo-alt"></i>
+          </div>
+          <div class="duration-bar">
+            <span>0:25</span>
+            <div class="full-bar">
+              <div class="progress-bar">
+                <div class="progress-circle"></div>
+              </div>
+            </div>
+            <span>4:35</span>
+          </div>
+        </div>
+  
+        <div class="player-audio">
+          <i class="fas fa-list"></i>
+          <i class="fas fa-tv"></i>
+          <i class="fas fa-volume-up"></i>
           <div class="full-bar">
             <div class="progress-bar"></div>
           </div>
-          <span>4:35</span>
         </div>
-      </div>
 
-      <div class="volume-panel float-left">
-        <i class="fas fa-list"></i>
-        <i class="fas fa-tv"></i>
-        <i class="fas fa-volume-up"></i>
-        <div class="full-bar">
-          <div class="progress-bar"></div>
-        </div>
-      </div>
+      </section>
+
+      
 
     </footer>
     
