--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
@@ -33,7 +33,7 @@
             <img src="" alt="">
           </div> -->
 
-          <div class="nav-left">
+          <div class="nav-sections">
             <div class="voice selected">
               <div class="green-bar"></div>
               <img src="assets/img/home.svg" alt="">
@@ -49,11 +49,78 @@
             </div>
           </div>
 
+          <div class="nav-playlists">
+            <div class="voice uppercase">
+              <h3>playlist</h3>
+            </div>
+            <div class="voice">
+              <span class="plus">
+                +
+              </span>
+              <h4">Crea Playlist</h4>
+            </div>
+            <div class="voice">
+              <ul>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+                <li>
+                  <h4>
+                    Nome Playlist
+                  </h4>
+                </li>
+              </ul>
+            </div>
+          </div>
+
         </div>
 
         <div class="nav-bottom"></div>
 
       </div>
+
+      <section id="content">
+
+        <div class="upgrade">
+
+          <button>
+            EFFETTUA L'UPGRADE
+          </button>
+          
+        </div>
+
+        <div class="covers">
+
+        </div>
+
+      </section>
 
     </main>
 
