--- a/index.html
+++ b/index.html
@@ -146,13 +146,10 @@
           </div>
 
           <div class="recently-played">
-
-            <h3>
+            <h3 class="section-title">
               Recently played
             </h3>
-
             <div class="cover-list">
-
               <div class="cover">
                 <div class="cover-img">
                   <img src="assets/img/metal_lifting.jpg" alt="">
@@ -164,109 +161,117 @@
                   Subtitle
                 </h5>
               </div>
-
               <div class="cover">
                 <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
+                  <img src="assets/img/stranger.jpeg" alt="">
                 </div>
                 <h4>
-                  Heavy Metal
+                  Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                </h4>
+                <h5>
+                  Kyle Dixon & Michael Stein
+                </h5>
+              </div>
+              <div class="cover">
+                <div class="cover-img">
+                  <img src="assets/img/aquietplace.jpeg" alt="">
+                </div>
+                <h4>
+                  A quiet place
                 </h4>
                 <h5>
                   Subtitle
                 </h5>
               </div>
-
               <div class="cover">
                 <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
+                  <img src="assets/img/split.jpeg" alt="">
                 </div>
                 <h4>
-                  Heavy Metal
+                  Split
                 </h4>
                 <h5>
                   Subtitle
                 </h5>
               </div>
-
               <div class="cover">
                 <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
+                  <img src="assets/img/cure.jpeg" alt="">
                 </div>
                 <h4>
-                  Heavy Metal
+                  A cure for wellness
                 </h4>
                 <h5>
                   Subtitle
                 </h5>
               </div>
-
               <div class="cover">
                 <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
+                  <img src="assets/img/sinister.jpeg" alt="">
                 </div>
                 <h4>
-                  Heavy Metal
+                  Sinister
                 </h4>
                 <h5>
                   Subtitle
                 </h5>
               </div>
-
-              <div class="cover">
-                <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
-                </div>
-                <h4>
-                  Heavy Metal
-                </h4>
-                <h5>
-                  Subtitle
-                </h5>
-              </div>
-              
             </div>
-
           </div>
 
           <div class="created-for">
-
-            <h3>
+            <h3 class="section-title">
               Creato per John Doe
             </h3>
+            <h5 class="section-title">
+              Più ascolti, più accurati saranno i suggerimenti
+            </h5>
+            <div class="cover-list">
+              <div class="cover">
+                <div class="cover-img">
+                  <img src="assets/img/radar.jpeg" alt="">
+                </div>
+                <h4>
+                  Release Radar
+                </h4>
+              </div>
+              <div class="cover">
+                <div class="cover-img">
+                  <img src="assets/img/mixdaily.jpeg" alt="">
+                </div>
+                <h4>
+                  Daily Mix
+                </h4>
+              </div>
+            </div>
+          </div>
 
-            <h5>
+          <div class="popular-artists">
+            <h3 class="section-title">
+              Creato per John Doe
+            </h3>
+            <h5 class="section-title">
               Più ascolti, più accurati saranno i suggerimenti
             </h5>
 
             <div class="cover-list">
-
               <div class="cover">
                 <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
+                  <img src="assets/img/youg.jpeg" alt="">
                 </div>
                 <h4>
-                  Heavy Metal
+                  Young and Beautiful
                 </h4>
-                <h5>
-                  Subtitle
-                </h5>
               </div>
-
               <div class="cover">
                 <div class="cover-img">
-                  <img src="assets/img/metal_lifting.jpg" alt="">
+                  <img src="assets/img/einaudi.jpeg" alt="">
                 </div>
                 <h4>
-                  Heavy Metal
+                  Einaudi
                 </h4>
-                <h5>
-                  Subtitle
-                </h5>
               </div>
-              
             </div>
-
           </div>
 
         </div>
