lg quasi finito

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 
   <body>
 
+    <!-- main -->
+
     <main>
 
+      <!-- left navbar -->
+
       <div class="main-nav float-left">
+
+        <!-- top menu -->
 
         <div class="nav-top">
 
@@ -49,62 +55,64 @@
             </div>
           </div>
 
+        </div>
+
+        <!-- /top menu -->
+
+        <!-- middle menu -->
+
+        <div class="nav-center">
+
           <div class="nav-playlists">
             <div class="voice uppercase">
-              <h3>playlist</h3>
+              <h4>playlist</h4>
             </div>
-            <div class="voice">
-              <span class="plus">
+            <div class="voice non-selected">
+              <h1 class="plus">
                 +
-              </span>
-              <h4">Crea Playlist</h4>
+              </h1>
+              <h4>Crea Playlist</h4>
             </div>
-            <div class="voice">
-              <ul>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-                <li>
-                  <h4>
-                    Nome Playlist
-                  </h4>
-                </li>
-              </ul>
+            <div class="playlist-list voice non-selected">
+              <h4>
+                Nome Playlist
+              </h4>
+              <h4>
+                Nome Playlist
+              </h4>
+              <h4>
+                Nome Playlist
+              </h4>
+              <h4>  
+                Nome Playlist
+              </h4>
+              <h4>
+                Nome Playlist
+              </h4>
+              <h4>
+                Nome Playlist
+              </h4>
+              <h4>
+                Nome Playlist
+              </h4>
             </div>
           </div>
 
         </div>
 
+        <!-- /middle menu -->
+
+        <!-- bottom menu -->
+
         <div class="nav-bottom"></div>
 
+        <!-- /bottom menu -->
+
       </div>
+
+      <!-- /left navbar -->
+
+      <!-- main content -->
 
       <section id="content">
 
@@ -278,7 +286,13 @@
 
       </section>
 
+      <!-- /main content -->
+
     </main>
+
+    <!-- /main -->
+
+    <!-- footer -->
 
     <footer>
 
@@ -329,6 +343,8 @@
       
 
     </footer>
+
+    <!-- /footer -->
     
   </body>
 
