main completo in LG

--- a/index.html
+++ b/index.html
@@ -104,7 +104,19 @@
 
         <!-- bottom menu -->
 
-        <div class="nav-bottom"></div>
+        <div class="nav-bottom">
+
+          <div class="install">
+            <img src="assets/img/download.svg" alt="">
+            <h4> Installa app</h4>
+          </div>
+
+          <div class="user">
+            <img src="assets/img/profile.svg" alt="">
+            <h3> John Doe</h3>
+          </div>
+
+        </div>
 
         <!-- /bottom menu -->
 
@@ -131,7 +143,7 @@
           <div class="covers-sections uppercase">
 
             <ul class="inline-menu">
-              <li>
+              <li class="underlined-li">
                 in evidenza
               </li>
               <li>
